- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.1.0 RC1
- 
    None
- 
    Windows XP SP3, Qt5.1 RC1 (binary installer), MinGW 4.8 32Bit, Linux
- 
        74438ef7c14f19cecda0910a122eb8887dab649d
"filePath"-property and "filePaths"-property return "undefined" instead of a FilePath. "folder"-property works fine.
Edit1: Example
import QtQuick 2.1 import QtQuick.Dialogs 1.0 Rectangle { width: 360 height: 360 FileDialog { id: openDialog title: qsTr("Yet another WinXP-fail-example") selectExisting: true visible: true onAccepted: { console.log("") console.log("filePaths: " + openDialog.filePaths) console.log("filePath: " + openDialog.filePath) console.log("flder: " + openDialog.folder) } } }
Output: (native Dialog)
filePaths: undefined filePath: undefined flder: C:/
| For Gerrit Dashboard: QTBUG-31847 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 59902,2 | QtQuick.Dialogs: sync the docs with the implementation | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |