QtQuick.Dialogs: sync the docs with the implementation

We've been using URLs instead of strings for some time now, just
forgot to change the docs until now.

Task-number: QTBUG-31847
Change-Id: I49a42282aeefb95e4d367397e2f290f4af65687e
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>
Reviewed-by: Venugopal Shivashankar <venugopal.shivashankar@digia.com>